--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
   <!-- Footer Row -->
   <div class="row mt-4">
     <div class="col text-start ">
-      <p class="mb-0 fw-bold">Student Name: Asma </p>
+      <p class="mb-0 fw-bold">Student Name: Asma Student Id: 991699083</p>
     </div>
   </div>
 
